# leaguetracker

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  package.json  players  pnpm-lock.yaml
additems/: Cargo.toml
additems/src/: main.rs
bindings/: Game.ts
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/adapters/hono/: vite.config.ts
frontend/bindings/bindings/: Game.ts
frontend/public/: manifest.json
frontend/src/: entry.express.tsx  entry.hono.tsx  global.css  root.tsx
frontend/src/components/: MatchCard.svelte
frontend/src/components/matchcard/: matchcard.tsx
frontend/src/components/router-head/: router-head.tsx
frontend/src/pages/: index.astro
frontend/src/routes/: index.tsx  layout.tsx
frontend/src/routes/markdown/: index.md  layout.tsx
frontend/src/routes/msl/: index.tsx
frontend/src/utilities/: items.ts  normalization.js  normalization.ts  perks.ts  secondaryrunes.js  secondaryrunes.ts  spells.js  spells.ts
frontend/src/utility/: normalization.js  secondaryrunes.js  spells.js
iconfinder/: map
migrations/: first.sql  second.sql  third.sql
removeoldprimary/: Cargo.toml
scripts/iconfinder/src/: main.rs
server/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  players
server/migrations/sqlite/: first.sql
server/scripts/iconfinder/: Cargo.toml
server/scripts/postgres_sqlite/: Cargo.toml
server/scripts/postgres_sqlite/src/: main.rs
server/src/: gamewatcher.rs  main.rs
src/: gamewatcher.rs  main.rs
