[package]
name = "streaktracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
debug=true


[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["macros"] }
chrono = "0.4.24"
crc32fast = "1.3.2"
dotenvy = "0.15.7"
futures = "0.3.28"
notify = "6.0.0"
phf = { version = "0.11.1", features = ["macros"] }
riven = {version = "2.18.0", default-features= false, features = ["rustls-tls"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.28.1", features = ["full"] }
