[package]
name = "streaktracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros"] }
chrono = "0.4"
crc32fast = "1.3"
dotenvy = "0.15"
notify = "6"
phf = { version = "0.11", features = ["macros"] }
riven = {version = "2.18", default-features= false, features = ["rustls-tls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.28", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = {version = "0.4", features = ["trace", "fs"]}
tracing = "0.1"
ts-rs = "6.2"
uuid = { version = "1.4.0", features = ["v3"] }
md-5 = "0.10.5"
