[package]
name = "streaktracker"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
crc32fast = "1.3"
dotenvy = "0.15"
md-5 = "0.10"
serde_json = "1"
tracing = "0.1"
ts-rs = "6"

[dependencies.axum]
version = "0.6"
features = ["macros"]
optional = false

[dependencies.riven]
version = "2"
features = ["rustls-tls"]
optional = false
default-features = false

[dependencies.serde]
version = "1"
features = ["std", "serde_derive"]
optional = false
default-features = false

[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "uuid", "chrono"]
optional = false

[dependencies.tokio]
version = "1"
features = ["full"]
optional = false

[dependencies.tower-http]
version = "0.4"
features = ["percent-encoding", "fs", "httpdate", "tracing", "set-status", "mime_guess", "trace"]
optional = false
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
optional = false

[dependencies.uuid]
version = "1"
features = ["v3"]
optional = false
[profile.release]
lto = true
strip = true

[profile.release.package]

[[bin]]
path = "src/main.rs"
name = "server"
plugin = false
proc-macro = false
required-features = []
