[package]
name = "postgres_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
libsql-client = "0.31.8"
sqlx = { version="0.6.3", features=["runtime-tokio-rustls", "postgres", "uuid"]}
tokio = { version = "1.29.1", features = ["full"] }
